tailwind/tailwind.css
/* ... */
/*--- simple checbox ------------------------- */
@layer components {
  .simple-checkbox {
    @apply h-4 w-4 cursor-pointer appearance-none rounded-sm border-2 border-gray-400 bg-white bg-contain bg-center bg-no-repeat transition-all duration-200;
  }

  .simple-checkbox:checked {
    border-color: gray; /* blue-500 */
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z'/%3E%3C/svg%3E");
  }
}

/*---- loading indicator -----------*/

@layer components {
  .loading-indicator {
    @apply fixed inset-0 z-50 flex items-center justify-center bg-black/40;
    @apply pointer-events-none opacity-0 transition-opacity duration-300;
  }

  .loading-content {
    @apply flex flex-col items-center justify-center rounded-lg bg-white p-8 shadow-xl;
  }

  .loading-spinner {
    @apply h-12 w-12 animate-spin;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24'%3e%3ccircle cx='12' cy='12' r='10' stroke='%233843d0' stroke-width='4' opacity='0.25'%3e%3c/circle%3e%3cpath fill='%233843d0' d='M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z'%3e%3c/path%3e%3c/svg%3e");
    background-repeat: no-repeat;
    background-size: contain;
  }

  .loading-text {
    @apply text-brand-deep-purple mt-4 text-lg font-medium;
  }

  .htmx-request.loading-indicator {
    @apply pointer-events-auto opacity-100;
  }
}

/*---- table class -----------*/

@layer components {
  .base-table {
    @apply w-full table-auto border-collapse text-gray-700;
  }

  .base-table thead {
    @apply text-brand-deep-purple sticky top-0 z-10 text-sm;
  }

  .base-table thead th {
    @apply relative h-10 whitespace-nowrap bg-gray-200 p-4 text-left font-medium;
  }

  .base-table thead::after {
    content: ' ';
    @apply absolute -bottom-1.5 left-0 h-1.5 w-full bg-stone-100;
  }

  .base-table thead th:first-child {
    @apply rounded-l-lg;
  }
  .base-table thead th:last-child {
    @apply rounded-r-lg;
  }

  .base-table tbody {
    @apply relative pt-4 text-sm;
  }

  .base-table tbody::before {
    content: '';
    @apply absolute left-0 top-0 -z-20 h-full w-full rounded-lg bg-white shadow-sm;
  }

  .base-table tbody tr {
    @apply relative;
  }

  .base-table tbody tr::after {
    content: '';
    @apply -translate-1/2 absolute left-1/2 top-1/2 -z-10 h-[90%] w-[99%] -translate-y-1/2 rounded-lg bg-gray-100 opacity-0;
  }

  .base-table tbody tr:first-child::after {
    content: '';
    @apply -translate-1/2 absolute left-1/2 top-[53.8%] -z-10 h-[80%] w-[99%] -translate-y-1/2 rounded-lg bg-gray-100 opacity-0;
  }

  .base-table tbody tr:hover::after {
    @apply opacity-100;
  }

  .base-table tbody tr.active::after {
    @apply opacity-100;
  }

  /* .base-table tbody tr:hover{
      @apply bg-gray-100 rounded-lg;
  }  */
  .base-table tbody td {
    @apply whitespace-nowrap border-b-[1px] border-gray-100 p-4 text-left;
  }

  .base-table th.col-action,
  .base-table td.col-action {
    @apply sticky right-0;
  }

  .base-table tbody td.col-action {
    @apply bg-white;
  }

  .base-table tbody tr:hover td.col-action,
  .base-table tbody tr.active td.col-action {
    @apply bg-gray-100;
  }
}

/*------------ Tabs --------------*/
@layer {
  .tabs {
    @apply flex h-full gap-x-8 px-2;
  }

  .tabs li {
    @apply relative flex h-full cursor-pointer items-center text-sm text-gray-500;
  }

  .tabs li.active {
    @apply text-brand-deep-purple font-medium;
  }

  .tabs li div {
    @apply bg-brand-mango absolute bottom-0 left-1/2 h-1.5 w-2/3 max-w-10 -translate-x-1/2 rounded-t-lg;
  }
}

@layer components {
  .stepper {
    @apply flex items-center justify-between gap-4;
  }

  .stepper a {
    @apply flex items-center gap-4;
  }

  .stepper h6 {
    @apply text-brand-deep-purple grid h-8 w-8 place-content-center rounded-full border border-gray-300;
  }

  .stepper a.active h6 {
    @apply bg-brand-deep-purple text-center text-white;
  }

  .stepper span {
    @apply whitespace-nowrap text-sm text-gray-400;
  }

  .stepper a.active span {
    @apply text-brand-deep-purple font-medium;
  }
}

@layer components {
  .modal {
    @apply relative z-50 mx-auto my-4 w-full max-w-lg rounded-xl bg-white p-6 shadow-xl;
  }

  .modal-lg {
    @apply max-w-2xl;
  }

  .modal-backdrop {
    @apply fixed inset-0 z-40 overflow-y-auto bg-black/40 p-4;
  }

  .modal .dialog-box {
    @apply z-50 mx-auto my-auto rounded-lg bg-white p-6 shadow-sm;
  }

  .modal .header {
    @apply flex items-center justify-between;
  }

  .modal .content {
    @apply flex flex-col gap-4 py-4;
  }

  .modal .footer {
    @apply space-x-4 text-right;
  }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.better-tabs {
  .tabs {
    @apply flex h-full gap-x-8 overflow-x-auto px-2;
  }

  .tab {
    @apply relative flex h-full cursor-pointer items-center gap-1 text-nowrap text-sm text-gray-500;

    /* Active Tabs */
    &:is(.tab-active, [aria-selected='true']):not(.tab-disabled, [disabled]),
    &:is(input:checked),
    &:is(label:has(:checked)) {
      &:before {
        @apply bg-brand-mango text-brand-mango absolute bottom-0 left-1/2 h-1.5 w-10 w-2/3 max-w-10 -translate-x-1/2 rounded-t-lg;
        --tw-content: '';
        content: var(--tw-content);
        transition: background-color 0.2s ease;
      }
    }
  }

  .tab-active {
    @apply text-brand-deep-purple font-medium;
  }
}

.relative > .pointer-events-none > svg {
  display: none; /* https://github.com/django-crispy-forms/crispy-tailwind/issues/124 */
}

select:disabled,
.textinput:disabled {
  @apply pointer-events-none opacity-50;
}
/* ... */

